# beginner_tutorials

./: README.md
pub_sub/: CMakeLists.txt  package.xml
pub_sub/app/: publisher.cpp  recorder.cpp  subscriber.cpp
pub_sub/docs/: cppcheck.txt  cpplint.txt
pub_sub/include/pub_sub/: listener.h  recorder.h  talker.h
pub_sub/launch/: _pub_sub_custom_launch.py  _pub_sub_default_launch.py  _pub_sub_error_launch.py  _pub_sub_fatal_launch.py  _pub_sub_new_message_launch.py
pub_sub/results/: cppcheck.txt  cpplint.txt  frames_2022-12-01_01.21.06.gv  frames_2022-12-05_16.45.07.gv
pub_sub/results/record_all/: metadata.yaml  record_all_0.db3
pub_sub/src/: listener.cpp  recorder.cpp  talker.cpp
pub_sub/srv/: StringChange.srv
pub_sub/test/: intergation_tester.cpp  tester.cpp
